force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Student Details</description>
    <label>Student</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>