force-app/main/default/objects/Student__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Student Age</description>
    <formula>CASE(MONTH(TODAY()) - MONTH( Student_DOB__c ),
0,
IF(DAY(TODAY()) &gt;= DAY(Student_DOB__c ), YEAR(TODAY()) - YEAR(Student_DOB__c ), YEAR(TODAY()) - YEAR(Student_DOB__c ) - 1),
IF(MONTH(TODAY()) &lt; MONTH(Student_DOB__c ), YEAR(TODAY()) - YEAR(Student_DOB__c ) - 1, YEAR(TODAY()) - YEAR(Student_DOB__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>