force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <description>Course Selected</description>
    <inlineHelpText>Course Selected</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>