force-app/main/default/objects/Student__c/fields/Student_Address__c.field-meta.xml
<CustomField>
    <fullName>Student_Address__c</fullName>
    <description>Address of the Student</description>
    <inlineHelpText>Address of the Student</inlineHelpText>
    <label>Student Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>