force-app/main/default/objects/Student__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <description>Email of the Student</description>
    <inlineHelpText>Email of the Student</inlineHelpText>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>