force-app/main/default/objects/Student__c/fields/Student_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Mobile_Number__c</fullName>
    <description>Mobile number of the Student</description>
    <inlineHelpText>Mobile number of the Student</inlineHelpText>
    <label>Student Mobile Number</label>
    <type>Phone</type>
</CustomField>