force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>Name of the Student</description>
    <inlineHelpText>Name of the Student</inlineHelpText>
    <label>Student Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>